Implemented Custom types and translation for Categories public handlers
