# api/responses/category.go
@@ -31,12 +31,12 @@ type CategoryAdminResponse struct {
 }
 
 type CategoryPublicResponse struct {
-	ID          uuid.UUID  `json:"id"`
-	ParentID    *uuid.UUID `json:"parent_id,omitempty"`
-	Name        string     `json:"name"`
-	Slug        string     `json:"slug"`
+	ID          uuid.UUID  `json:"id" format:"uuid"`
+	ParentID    *uuid.UUID `json:"parent_id,omitempty" format:"uuid"`
+	Name        string     `json:"name" example:"Electronics"`
+	Slug        string     `json:"slug" format:"slug" example:"electronics"`
 	Description *string    `json:"description,omitempty"`
-	ImageUrl    string     `json:"image_url"`
-	CreatedAt   time.Time  `json:"created_at"`
-	UpdatedAt   time.Time  `json:"updated_at"`
+	ImageUrl    string     `json:"image_url" example:"https://example.com/image.jpg" format:"url"`
+	CreatedAt   time.Time  `json:"created_at" format:"date-time"`
+	UpdatedAt   time.Time  `json:"updated_at" format:"date-time"`
 }
